# AnimatedLEDStripClient

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  README.md  codecov.yml  dependencies.html  dependency-info.html  distribution-management.html  index.html  licenses.html  plugin-management.html  plugins.html  pom.xml  project-info.html  scm.html  summary.html  team.html
animatedledstrip-client/: index-outline.html  index.html  package-list
animatedledstrip-client/alltypes/: index.html
animatedledstrip-client/animatedledstrip.client/: index.html
animatedledstrip-client/animatedledstrip.client/-animation-sender-factory/: create.html  default-sender.html  index.html
animatedledstrip-client/animatedledstrip.client/-animation-sender-factory/-animation-sender/: -init-.html  connect-attempt-limit.html  connected.html  end.html  index.html  ip-address.html  is-disconnected.html  port.html  running-animations.html  send-animation.html  send.html  set-as-default-sender.html  set-i-p-address.html  set-on-connect-callback.html  set-on-disconnect-callback.html  set-on-end-animation-callback.html  set-on-new-animation-callback.html  set-on-receive-callback.html  start.html  started.html
animatedledstrip-client/animatedledstrip.client/animatedledstrip.animationutils.-animation-data/: end-animation.html  index.html  send.html
animatedledstrip-client/animatedledstrip.client/animatedledstrip.leds.-animation-data/: index.html  send.html
client-c++/: .gitignore  AnimationData.cpp  AnimationData.h  AnimationSender.cpp  AnimationSender.h  CMakeLists.txt  CodeCoverage.cmake  ColorContainer.h  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  StripInfo.h  test.cpp
client-c++/src/: AnimationData.cpp  AnimationData.h  AnimationSender.cpp  AnimationSender.h  CMakeLists.txt  ColorContainer.h  RunningAnimationMap.cpp  RunningAnimationMap.h  StripInfo.h
client-c++/test/: AnimationDataTest.cpp  AnimationDataTest.h  AnimationTest.h  CMakeLists.txt  ColorContainerTest.h  ContinuousTest.h  DirectionTest.h  RunningAnimationMapTest.h  StripInfoTest.h  run_tests.cpp
client-dart/: .gitignore  pubspec.yaml
client-dart/example/: client_example.dart
client-dart/lib/: animatedledstripclient.dart  client.dart
client-dart/lib/src/: animation_data.dart  animation_sender.dart  color_container.dart  running_animation_map.dart  strip_info.dart
client-dart/test/: animation_data_test.dart  color_container_test.dart  test_all.dart
client-go/: Animation.go  AnimationData.go  AnimationData_test.go  AnimationSender.go  Animation_test.go  ColorContainer.go  ColorContainer_test.go  Continuous.go  Continuous_test.go  Direction.go  Direction_test.go  RunningAnimationMap.go  StripInfo.go
client-kotlin-java/: pom.xml
client-kotlin-java/src/main/java/animatedledstrip/client/: AnimationData.kt  AnimationSender.kt  AnimationSenderFactory.kt
client-kotlin-java/src/test/java/: AnimationDataExtensionTest.kt  AnimationSenderFactoryTest.kt  AnimationSenderTest.kt
client-python3/: .gitignore  AnimationData.py  AnimationSender.py  Direction.py  setup.cfg  setup.py  test.py
client-python3/client/: Animation.py  AnimationData.py  ColorContainer.py
client-python3/led_client/: Animation.py  AnimationData.py  AnimationSender.py  ColorContainer.py  __init__.py  animation_data.py  animation_sender.py  color_container.py  global_vars.py  utils.py
client-python3/test/client/: test_animation_data.py  test_animation_sender.py  test_colorcontainer.py
client-python3/test/led_client/: test_animation_data.py  test_animation_sender.py  test_colorcontainer.py
client-ruby/: Gemfile  Rakefile  animatedledstrip-client.gemspec  animatedledstrip_client.gemspec  animation_data.rb  animation_sender.gemspec  upload_coverage.rb
client-ruby/lib/: animation.rb  animation_data.rb  animation_sender.rb  color_container.rb  direction.rb
client-ruby/test/: helper.rb  test_animation.rb  test_animation_data.rb  test_animation_sender.rb  test_direction.rb
client-rust/: Cargo.toml
client-rust/src/: animation.rs  animation_data.rs  animation_sender.rs  color_container.rs  direction.rs  lib.rs
src/main/java/animatedledstrip/client/: AnimationData.kt  AnimationSenderFactory.kt  ColorUtils.kt
src/test/java/: AnimationDataExtensionTest.kt  AnimationSenderFactoryTest.kt
src/test/java/animatedledstrip/client/: AnimationSenderFactoryTest.kt
